crates/nirvash-macros/tests/fixtures/code_tests_legacy_driver.stderr
error: driver = ... is no longer supported; use binding = ... and implement ProtocolRuntimeBinding<Spec>
   --> tests/fixtures/code_tests_legacy_driver.rs:118:68
    |
118 | #[code_tests(spec = Spec, binding = Binding, init = initial_state, driver = tests::Driver)]
    |                                                                    ^^^^^^
